--- a/config/config2.yaml
+++ b/config/config2.yaml
@@ -4,4 +4,4 @@ llm:
   api_type: "openai"  # or azure / ollama / open_llm etc. Check LLMType for more options
   model: "gpt-3.5-turbo"  # or gpt-3.5-turbo-1106 / gpt-4-1106-preview
   base_url: "https://api.openai.com/v1"  # or forward url / other llm url
-  api_key: "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"
+  api_key: ""
